fix visibility

--- a/08-Website/index.css
+++ b/08-Website/index.css
@@ -128,11 +128,11 @@ a.button {
     padding: 10px 10px 10px 10px;
     box-shadow: 0px 0px 16px 0px rgba(255,255,255,0.73);
     font-size: 24pt;
-    line-height: 22pt;
+    line-height: 105%;
 }
 a.button:hover {
     background: #ffffff !important;
-    color: #111111;
+    color: #111111 !important;
 }
 
 div.footer {
